# gpt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  seed_sweep.py  train_gpt.py
.github/workflows/: ci.yml
assets/: gpt.pth  gpt_history.json  seed_robustness.json
gpt/: __init__.py  analysis.py  data.py  layers.py  train.py
models/: __init__.py  bigram.py  gpt.py
notebooks/: 05_attention_analysis.ipynb
notebooks/progression/: 01_bigram.ipynb  02_single_head.ipynb  03_multihead_feedforward.ipynb  04_full_gpt.ipynb
tests/: test_analysis.py  test_smoke.py
